Change sponsor of communiquez email and register email

--- a/Artywiz/communication-les-matchs.html
+++ b/Artywiz/communication-les-matchs.html
@@ -1168,9 +1168,9 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;">
-                                            <a href="https://www.adetem.org/" target="_blank">
+                                            <a href="https://lgef.fff.fr/" target="_blank">
                                                 <img
-                                                    src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1596610566/covid/adetem-sponsor.png" alt="" width="160"
+                                                    src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1642992823/email/lgef.png" alt="" width="160"
                                                     style="display:block; line-height:0px; font-size:0px; border:0px; width:77px;"
                                                     editable label="image" />
                                             </a>
@@ -1187,15 +1187,15 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                 </table>
                                 <!--[if (gte mso 9)|(IE)]></td><td><![endif]-->
                                 <!--right-->
-                                <table width="290" class="table-full" border="0" align="left" cellpadding="0"
+                                <table width="290" height="94" class="table-full" border="0" align="left" cellpadding="0"
                                     cellspacing="0">
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;">
-                                            <a href="https://www.groupama.fr/" target="_blank">
+                                            <a href="https://sponsoplus.fr/" target="_blank">
                                                 <img
-                                                    src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1596609866/covid/sponsor-groupama.png" alt="" width="160"
-                                                    style="display:block; line-height:0px; font-size:0px; border:0px; width:77px;"
+                                                    src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1642992823/email/sponso_plus.png" alt="" width="120"
+                                                    style="display:block; line-height:0px; font-size:0px; border:0px; width:120px;"
                                                     editable label="image" />
                                             </a>
                                         </td>
