--- a/Artywiz/register.html
+++ b/Artywiz/register.html
@@ -130,9 +130,13 @@
                                 <div style="Margin:0 30px; max-width:560px; min-width: 260px; font-family: 'Roboto', sans-serif;">
                                     <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(230400px - 48000%); min-width:-webkit-calc(190px); width:calc(230400px - 48000%); min-width:calc(100%);">
                                         <p style="text-align: left; font-family: Roboto; font-size: 13px; font-weight: normal; font-stretch: normal; font-style: normal; line-height: normal; letter-spacing: normal; margin: 0; color: #607d8b;">
+                                            BIENVENUE SUR ARTYWIZ! <br><br>
+
                                             ARTYWIZ est un outil en ligne gratuit, mis à la disposition des clubs de football par la LGEF pour créer et animer l’ensemble de leur communication. <br><br>
 
-                                            Réalisez vous mêmes imprimés, communication internet ou accessoires de sport..… ARTYWIZ a tout prévu pour professionnaliser la communication de votre club et pour valoriser vos équipes et vos sponsors, en toute simplicité!
+                                            Réalisez vous mêmes imprimés, communication internet ou accessoires de sport..… ARTYWIZ a tout prévu pour professionnaliser la communication de votre club et pour valoriser vos équipes et vos sponsors, en toute simplicité! <br><br>
+
+                                            Pour vous connecter et commencer à créer la communication de votre club, utilisez votre email comme identifiant, ainsi que le mot de passe ci-dessous…
                                         </p>
                                     </div>
                                 </div>
@@ -635,9 +639,6 @@
                         <div style="width:190px; max-width:80%; width:-webkit-calc(480px - 100%); min-width:-webkit-calc(190px); width:calc(480px - 100%); min-width:calc(80%); margin: auto;">
                             <a href="https://artywiz.io/" target="_blank" style="text-decoration: none;">
                                 <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1581565601/etape-1/logo-black.png" alt="" style="margin-bottom: 41px;">
-                            </a>
-                            <a href="https://lgef.fff.fr/" target="_blank">
-                                <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1582253821/etape-1/lgef-footer.png" alt="" style="width: 70px; margin-bottom: 30px; margin-left: 60px;">
                             </a>
                             <div>
                                 <a href="https://www.facebook.com/ArtywizFootball" target="_blank" style="text-decoration: none;">
