--- a/Artywiz/ateliers.html
+++ b/Artywiz/ateliers.html
@@ -614,11 +614,10 @@ u + .body .full { width:100% !important; width:100vw !important;}
     <module label="CTA" auto>
         <table class="full" align="center" bgcolor="#FFFFFF" width="100%" border="0" cellspacing="0" cellpadding="0">
             <tr>
-                <td align="center" bgcolor="#FFD167" style="background-size:cover; background-position:center;">
+                <td align="center" bgcolor="#FFD167" background="https://res.cloudinary.com/dw1zug8d6/image/upload/v1645520599/email/Ateliers/banner-new.png" style="background-size:cover; background-position:center;">
                     <table class="table-inner" width="600" style="max-width: 600px;" border="0" align="center" cellpadding="0" cellspacing="0">
                         <tr>
-                            <td>
-                                <img style="width: 100%;" src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1645438185/email/Ateliers/banner-ateliers.png" alt="">
+                            <td height="635">
                             </td>
                         </tr>
                     </table>
@@ -988,7 +987,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
     <module label="3/3 Panel" auto>
         <table class="full" align="center" bgcolor="#F7F7F7" width="100%" border="0" cellspacing="0" cellpadding="0">
             <tr>
-                <td align="center" background="https://res.cloudinary.com/dw1zug8d6/image/upload/v1597654774/covid/program-bg.png">
+                <td align="center" background="https://res.cloudinary.com/dw1zug8d6/image/upload/v1597654774/covid/program-bg.png" style="background-color: #1F8EFA;">
                     <table class="table-inner" width="600" style="max-width: 600px;" border="0" align="center"
                         cellpadding="0" cellspacing="0">
                         <tr>
@@ -1289,8 +1288,8 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                         <td align="center" style="line-height:0px;">
                                             <a href="https://sponsoplus.fr/" target="_blank">
                                                 <img
-                                                    src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1642992823/email/sponso_plus.png" alt="" width="120"
-                                                    style="display:block; line-height:0px; font-size:0px; border:0px; width:120px;"
+                                                    src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1642992823/email/sponso_plus.png" alt="" width="180"
+                                                    style="display:block; line-height:0px; font-size:0px; border:0px; width:180px;"
                                                     editable label="image" />
                                             </a>
                                         </td>
