Add link in banner ateliers
Add link in banner ateliers

--- a/Artywiz/ateliers.html
+++ b/Artywiz/ateliers.html
@@ -615,12 +615,14 @@ u + .body .full { width:100% !important; width:100vw !important;}
         <table class="full" align="center" bgcolor="#FFFFFF" width="100%" border="0" cellspacing="0" cellpadding="0">
             <tr>
                 <td align="center" bgcolor="#FFD167" background="https://res.cloudinary.com/dw1zug8d6/image/upload/v1645520599/email/Ateliers/banner-new.png" style="background-size:cover; background-position:center;">
-                    <table class="table-inner" width="600" style="max-width: 600px;" border="0" align="center" cellpadding="0" cellspacing="0">
-                        <tr>
-                            <td height="635">
-                            </td>
-                        </tr>
-                    </table>
+                    <a href="https://ateliers.artywiz.io/" target="_blank">
+                        <table class="table-inner" width="600" style="max-width: 600px;" border="0" align="center" cellpadding="0" cellspacing="0">
+                            <tr>
+                                <td height="435">
+                                </td>
+                            </tr>
+                        </table>
+                    </a>
                 </td>
             </tr>
             <tr>
