Replace text ateliers email
Replace text ateliers email

--- a/Artywiz/ateliers.html
+++ b/Artywiz/ateliers.html
@@ -247,7 +247,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                                 <p align="left" style="line-height: 20px; margin: 0;">
                                                     Les ateliers de la comm’ sont destinés aux clubs de football désireux d’être accompagnés dans l’utilisation d’ARTYWIZ football pour développer leur communication et leur marketing. <br><br>
 
-                                                    Chaque lundi à 18h30, 8 personnes maximum pourront participer à une formation gratuite et interactive en ligne (sur zoom) pour créer leur compte ARTYWIZ, optimiser et importer leur logo, et créer leurs premiers documents avec ARTYWIZ. <br><br>
+                                                    Chaque lundi et chaque jeudi à 18h30, 8 personnes maximum pourront participer à une formation gratuite et interactive en ligne (sur zoom) pour créer leur compte ARTYWIZ, optimiser et importer leur logo, et créer leurs premiers documents avec ARTYWIZ. <br><br>
 
                                                     Pour participer, il vous suffit de vous inscrire dans le calendrier des ateliers sur <a target="_blank" href="https://ateliers.artywiz.io/" style="color: #1F8EFA;">https://ateliers.artywiz.io/</a> (en fonction des places disponibles), vous recevrez un mail avec le lien zoom de la formation, et quelques indications sur les documents (logo, photos, etc...) à préparer pour celle-ci. <br>
                                                     A bientôt sur ARTYWIZ!
@@ -309,7 +309,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td>
-                                            <img width="260" src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1647939766/email/Ateliers/alarm.png" alt="">
+                                            <img width="260" src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1648195012/email/Ateliers/Tous_les_lundis_et_jeudis.png" alt="">
                                             <h2 style="font-family: 'Roboto'; font-style: normal; font-weight: 700; font-size: 24px; line-height: 28px; text-transform: uppercase; color: #4A4A4A; margin-top: 25px;">Contenu pédagogique :</h2>
                                             <ul style="font-size: 13px; line-height: 20px; color: #979797; padding-left: 25px; margin-bottom: 35px;">
                                                 <li>activer son compte Artywiz</li>
