Add link on button ateliers email
Add link on button ateliers email

--- a/Artywiz/ateliers.html
+++ b/Artywiz/ateliers.html
@@ -318,7 +318,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                                 <li>exercices pratiques</li>
                                                 <li>définir une stratégie de communication pour son club</li>
                                             </ul>
-                                            <a target="_blank" href="#" style="background: #419BF9; border-radius: 50px; padding: 13px 50px; font-family: 'Roboto'; font-style: normal; font-weight: 700; font-size: 18px; line-height: 21px; text-align: center; color: #FFFFFF;">
+                                            <a target="_blank" href="https://ateliers.artywiz.io/" style="background: #419BF9; border-radius: 50px; padding: 13px 50px; font-family: 'Roboto'; font-style: normal; font-weight: 700; font-size: 18px; line-height: 21px; text-align: center; color: #FFFFFF;">
                                                 Inscription gratuite
                                             </a>
                                         </td>
