Replace all mockup on panel sponsor emailing
Replace all mockup on panel sponsor emailing

--- a/Artywiz/sponsor-panel.html
+++ b/Artywiz/sponsor-panel.html
@@ -284,7 +284,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--icon-->
                                     <tr>
                                         <td align="center" bgcolor="#F8D02F" style="line-height:0px;">
-                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1647854233/email/sponsor-panel/Panneaux-sponsors.png" alt=""
+                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1648634508/email/sponsor-panel/Panneaux_sponsors_new.png" alt=""
                                                 width="100%"
                                                 style="display:block;line-height:0px; font-size:0px; border:0px;"
                                                 editable label="image" />
@@ -333,7 +333,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--icon-->
                                     <tr>
                                         <td align="center" bgcolor="#F8D02F" style="line-height:0px;">
-                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1647854193/email/sponsor-panel/b%C3%A2ches-sponsors.png" alt=""
+                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1648634798/email/sponsor-panel/b%C3%A2ches_sponsors_new.png" alt=""
                                                 width="100%"
                                                 style="display:block;line-height:0px; font-size:0px; border:0px;"
                                                 editable label="image" />
