--- a/Artywiz/sponsor-panel.html
+++ b/Artywiz/sponsor-panel.html
@@ -69,7 +69,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
         <table class="full" bgcolor="#FFFFFF" align="center" width="100%" border="0" cellspacing="0" cellpadding="0">
             <tr>
                 <td align="center" bgcolor="#787878"
-                    background="https://res.cloudinary.com/dw1zug8d6/image/upload/v1647853661/email/sponsor-panel/Header.png"
+                    background="https://res.cloudinary.com/dw1zug8d6/image/upload/v1653033779/email/sponsor-panel/Header-new.png"
                     style="background-size:cover; background-position:center;">
                     <table align="center" border="0" cellpadding="0" cellspacing="0">
                         <tr>
@@ -86,7 +86,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                                 </tr>
                                             </table>
                                             <!--left-->
-                                            <table width="170" class="table-full" border="0" align="left" cellpadding="0"
+                                            <table width="340" class="table-full" border="0" align="left" cellpadding="0"
                                                 cellspacing="0">
                                                 <!--img-->
                                                 <tr>
@@ -102,30 +102,6 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                                 <!--end img-->
                                             </table>
                                             <!--end left-->
-                                            <!--[if (gte mso 9)|(IE)]></td><td><![endif]-->
-                                            <table width="20" align="left" border="0" cellpadding="0" cellspacing="0">
-                                                <tr>
-                                                    <td height="20"></td>
-                                                </tr>
-                                            </table>
-                                            <!--[if (gte mso 9)|(IE)]></td><td><![endif]-->
-                                            <!--right-->
-                                            <table width="170" class="table-full" border="0" align="left" cellpadding="0"
-                                                cellspacing="0">
-                                                <!--img-->
-                                                <tr>
-                                                    <td align="center" style="line-height:0px;">
-                                                        <a href="https://lgef.fff.fr" target="_blank">
-                                                            <img
-                                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1625735976/developez/lgef-logo.png" alt="" width="160"
-                                                                style="display:block; line-height:0px; font-size:0px; border:0px; width: 52px;"
-                                                                editable label="image" />
-                                                        </a>
-                                                    </td>
-                                                </tr>
-                                                <!--end img-->
-                                            </table>
-                                            <!--end right-->
                                             <table width="100" align="left" border="0" cellpadding="0" cellspacing="0">
                                                 <tr>
                                                     <td height="20"></td>
@@ -173,7 +149,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                         <td
                                             style="font-family: Ubuntu; font-size: 14px; color:#FFFFFF;font-weight: bold; text-transform: uppercase;">
                                             <multi label="headline">
-                                                <p align="center" style="line-height: 16px; margin: 0;">INTERNET - RÉSEAUX SOCIAUX - EMAILINGS - AFFICHAGE</p>
+                                                <p align="center" style="line-height: 16px; margin: 0;">fabrication française - tarifs attractifs</p>
                                             </multi>
                                         </td>
                                     </tr>
@@ -230,7 +206,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                             style="font-family: Roboto; font-size: 21px; color:#4A4A4A; text-transform: uppercase; font-weight: bold;">
                                             <multi label="content">
                                                 <p align="left" style="line-height: 25px; margin: 0;">
-                                                    Mettez vos sponsorsen <br>valeur!
+                                                    METTEZ VOS SPONSORS <br>EN VALEUR
                                                 </p>
                                             </multi>
                                         </td>
@@ -1032,40 +1008,6 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1597251692/covid/mesures.png" alt="" width="73"
-                                                style="display:block; line-height:0px; font-size:0px; border:0px; width:73px;"
-                                                editable label="image" /></td>
-                                    </tr>
-                                    <!--end img-->
-                                    <tr>
-                                        <td height="20"></td>
-                                    </tr>
-                                    <!--title-->
-                                    <tr align="center">
-                                        <td
-                                            style="font-family:Open sans, Arial, Sans-serif; font-size:16px; color:#FFFFFF;font-weight:normal;">
-                                            <single label="title" style="line-height: 20px; font-weight: 600;"><b>Affichez les <br> mesures sanitaires</b></single>
-                                        </td>
-                                    </tr>
-                                    <!--end title-->
-                                    <tr>
-                                        <td height="15"></td>
-                                    </tr>
-                                </table>
-                                <!--end middle-->
-                                <!--[if (gte mso 9)|(IE)]></td><td><![endif]-->
-                                <table width="25" align="left" border="0" cellpadding="0" cellspacing="0">
-                                    <tr>
-                                        <td height="25"></td>
-                                    </tr>
-                                </table>
-                                <!--[if (gte mso 9)|(IE)]></td><td><![endif]-->
-                                <!--right-->
-                                <table width="183" class="table-full" border="0" align="left" cellpadding="0"
-                                    cellspacing="0">
-                                    <!--img-->
-                                    <tr>
-                                        <td align="center" style="line-height:0px;"><img
                                                 src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1597251766/covid/organiser.png" alt="" width="55"
                                                 style="display:block; line-height:0px; font-size:0px; border:0px; width:55px;"
                                                 editable label="image" /></td>
@@ -1086,7 +1028,14 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                         <td height="15"></td>
                                     </tr>
                                 </table>
-                                <!--end right-->
+                                <!--end middle-->
+                                <!--[if (gte mso 9)|(IE)]></td><td><![endif]-->
+                                <table width="25" align="left" border="0" cellpadding="0" cellspacing="0">
+                                    <tr>
+                                        <td height="25"></td>
+                                    </tr>
+                                </table>
+                                <!--[if (gte mso 9)|(IE)]></td><td><![endif]-->
                             </td>
                         </tr>
                         <tr>
