--- a/Artywiz/calendar-game.html
+++ b/Artywiz/calendar-game.html
@@ -425,7 +425,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1662969854/email/calendar/mockup-1.png" alt="" width="183"
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1666341460/email/calendar/calendar-game-1.png" alt="" width="183"
                                                 style="display:block; line-height:0px; font-size:0px; border:0px; width:100%;"
                                                 editable label="image" /></td>
                                     </tr>
@@ -445,7 +445,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1662969337/email/calendar/mockup-2.png" alt="" width="183"
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1666341460/email/calendar/calendar-game-2.png" alt="" width="183"
                                                 style="display:block; line-height:0px; font-size:0px; border:0px; width:100%;"
                                                 editable label="image" /></td>
                                     </tr>
@@ -479,7 +479,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1662969336/email/calendar/mockup-3.png" alt="" width="183"
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1666341460/email/calendar/calendar-game-3.png" alt="" width="183"
                                                 style="display:block; line-height:0px; font-size:0px; border:0px; width:100%;"
                                                 editable label="image" /></td>
                                     </tr>
@@ -499,7 +499,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1662969336/email/calendar/mockup-4.png" alt="" width="183"
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1666341460/email/calendar/calendar-game-4.png" alt="" width="183"
                                                 style="display:block; line-height:0px; font-size:0px; border:0px; width:100%;"
                                                 editable label="image" /></td>
                                     </tr>
@@ -512,7 +512,28 @@ u + .body .full { width:100% !important; width:100vw !important;}
                 </td>
             </tr>
             <tr>
-                <td height="50"></td>
+                <td height="35"></td>
+            </tr>
+            <tr>
+                <td>
+                    <table class="table-inner" width="600" style="max-width: 600px;" border="0" align="center"
+                        cellpadding="0" cellspacing="0">
+                        <tr>
+                            <td align="center">
+                                <a href="https://res.cloudinary.com/dw1zug8d6/image/upload/v1666341461/email/calendar/tutoriel_creer_son_calendrier_club_2023_avec_Artywiz_new.pdf" target="_blank" style="text-decoration: none; cursor: pointer;">
+                                    <button style="text-decoration: none; background: #419BF9; border-radius: 100px; border: none; padding: 13px 50px; box-sizing: border-box;">
+                                        <span style="font-family: 'Roboto'; font-style: normal; font-weight: 700; font-size: 18px; line-height: 21px; text-align: center; color: #FFFFFF;">
+                                            Télécharger le tutoriel
+                                        </span>
+                                    </button>
+                                </a>
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+            <tr>
+                <td height="65"></td>
             </tr>
         </table>
     </module>
