--- a/Artywiz/new-match-announcement.html
+++ b/Artywiz/new-match-announcement.html
@@ -651,9 +651,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                             <div style="background: #22175B; padding: 13px 19px; margin-bottom: 15px;">
                                                 <h3 style="font-family: Roboto; font-style: normal; font-weight: bold; font-size: 18px; line-height: 21px; text-transform: uppercase; color: #FFFFFF; margin: 0 0 3px; text-align: left;">Les Ateliers de la comm’</h3>
                                                 <p style="font-family: Roboto; font-style: normal; font-weight: 500; font-size: 13px; line-height: 20px; color: #FFFFFF; margin: 0; text-align: left;">
-                                                    Nous proposons des sessions d’aide à l’utilisation d’ARTYWIZ et à la création des vos premiers documents, chaque lundi de 18h30 à 19h30, pour des groupes de 5 personnes maximum. Inscrivez-vous gratuitement <br><br>
-            
-                                                    à nos formations sur <a href="https://ateliers.artywiz.io/" target="_blank">Ateliers.artywiz.io</a>
+                                                    Nous proposons des sessions d’aide à l’utilisation d’ARTYWIZ et à la création des vos premiers documents, chaque lundi de 18h30 à 19h30, pour des groupes de 5 personnes maximum. Inscrivez-vous gratuitement à nos formations sur <a href="https://ateliers.artywiz.io/" target="_blank">Ateliers.artywiz.io</a>
                                                 </p>
                                             </div>
                                         </td>
@@ -1193,40 +1191,6 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     </tr>
                                 </table>
                                 <!--[if (gte mso 9)|(IE)]></td><td><![endif]-->
-                                <!--middle-->
-                                <table width="183" class="table-full" border="0" align="left" cellpadding="0"
-                                    cellspacing="0">
-                                    <!--img-->
-                                    <tr>
-                                        <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1597251692/covid/mesures.png" alt="" width="73"
-                                                style="display:block; line-height:0px; font-size:0px; border:0px; width:73px;"
-                                                editable label="image" /></td>
-                                    </tr>
-                                    <!--end img-->
-                                    <tr>
-                                        <td height="20"></td>
-                                    </tr>
-                                    <!--title-->
-                                    <tr align="center">
-                                        <td
-                                            style="font-family:Open sans, Arial, Sans-serif; font-size:16px; color:#FFFFFF;font-weight:normal;">
-                                            <single label="title" style="line-height: 20px; font-weight: 600;"><b>Affichez les <br> mesures sanitaires</b></single>
-                                        </td>
-                                    </tr>
-                                    <!--end title-->
-                                    <tr>
-                                        <td height="15"></td>
-                                    </tr>
-                                </table>
-                                <!--end middle-->
-                                <!--[if (gte mso 9)|(IE)]></td><td><![endif]-->
-                                <table width="25" align="left" border="0" cellpadding="0" cellspacing="0">
-                                    <tr>
-                                        <td height="25"></td>
-                                    </tr>
-                                </table>
-                                <!--[if (gte mso 9)|(IE)]></td><td><![endif]-->
                                 <!--right-->
                                 <table width="183" class="table-full" border="0" align="left" cellpadding="0"
                                     cellspacing="0">
@@ -1298,7 +1262,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                         <tr>
                             <td>
                                 <!--left-->
-                                <table width="290" class="table-full" border="0" align="left" cellpadding="0"
+                                <table width="190" class="table-full" border="0" align="left" cellpadding="0"
                                     cellspacing="0">
                                     <!--img-->
                                     <tr>
@@ -1315,22 +1279,46 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                 </table>
                                 <!--end left-->
                                 <!--[if (gte mso 9)|(IE)]></td><td><![endif]-->
-                                <table width="20" align="left" border="0" cellpadding="0" cellspacing="0">
+                                    <table width="15" align="left" border="0" cellpadding="0" cellspacing="0">
+                                        <tr>
+                                            <td height="20"></td>
+                                        </tr>
+                                    </table>
+                                <!--[if (gte mso 9)|(IE)]></td><td><![endif]-->
+                                <!--left-->
+                                <table width="190" height="94" class="table-full" border="0" align="left" cellpadding="0"
+                                    cellspacing="0">
+                                    <!--img-->
+                                    <tr>
+                                        <td align="center" style="line-height:0px;">
+                                            <a href="https://www.sportyma.com" target="_blank">
+                                                <img
+                                                    src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1675397143/email/sportyma.png" alt="" width="180"
+                                                    style="display:block; line-height:0px; font-size:0px; border:0px; width:180px;"
+                                                    editable label="image" />
+                                            </a>
+                                        </td>
+                                    </tr>
+                                    <!--end img-->
+                                </table>
+                                <!--end left-->
+                                <!--[if (gte mso 9)|(IE)]></td><td><![endif]-->
+                                <table width="15" align="left" border="0" cellpadding="0" cellspacing="0">
                                     <tr>
                                         <td height="20"></td>
                                     </tr>
                                 </table>
                                 <!--[if (gte mso 9)|(IE)]></td><td><![endif]-->
                                 <!--right-->
-                                <table width="290" height="94" class="table-full" border="0" align="left" cellpadding="0"
+                                <table width="190" class="table-full" border="0" align="left" cellpadding="0"
                                     cellspacing="0">
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;">
-                                            <a href="https://sponsoplus.fr/" target="_blank">
+                                            <a href="https://www.rematch.tv" target="_blank">
                                                 <img
-                                                    src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1642992823/email/sponso_plus.png" alt="" width="180"
-                                                    style="display:block; line-height:0px; font-size:0px; border:0px; width:180px;"
+                                                    src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1675397153/email/rematch.png" alt="" width="160"
+                                                    style="display:block; line-height:0px; font-size:0px; border:0px; width:100px;"
                                                     editable label="image" />
                                             </a>
                                         </td>
