Add and remove some sponsor in sponsor panel email template
Add and remove some sponsor in sponsor panel email template

--- a/Artywiz/sponsor-panel.html
+++ b/Artywiz/sponsor-panel.html
@@ -460,9 +460,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                             <div style="background: #22175B; padding: 13px 19px; margin-bottom: 15px;">
                                                 <h3 style="font-family: Roboto; font-style: normal; font-weight: bold; font-size: 18px; line-height: 21px; text-transform: uppercase; color: #FFFFFF; margin: 0 0 3px; text-align: left;">Les Ateliers de la comm’</h3>
                                                 <p style="font-family: Roboto; font-style: normal; font-weight: 500; font-size: 13px; line-height: 20px; color: #FFFFFF; margin: 0; text-align: left;">
-                                                    Nous proposons des sessions d’aide à l’utilisation d’ARTYWIZ et à la création des vos premiers documents, chaque lundi de 18h30 à 19h30, pour des groupes de 5 personnes maximum. Inscrivez-vous gratuitement <br><br>
-            
-                                                    à nos formations sur <a href="https://ateliers.artywiz.io/" target="_blank">Ateliers.artywiz.io</a>
+                                                    Nous proposons des sessions d’aide à l’utilisation d’ARTYWIZ et à la création des vos premiers documents, chaque lundi de 18h30 à 19h30, pour des groupes de 5 personnes maximum. Inscrivez-vous gratuitement à nos formations sur <a href="https://ateliers.artywiz.io/" target="_blank">Ateliers.artywiz.io</a>
                                                 </p>
                                             </div>
                                         </td>
@@ -1080,7 +1078,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                         <tr>
                             <td>
                                 <!--left-->
-                                <table width="190" class="table-full" border="0" align="left" cellpadding="0"
+                                <table width="120" class="table-full" border="0" align="left" cellpadding="0"
                                     cellspacing="0">
                                     <!--img-->
                                     <tr>
@@ -1097,22 +1095,21 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                 </table>
                                 <!--end left-->
                                 <!--[if (gte mso 9)|(IE)]></td><td><![endif]-->
-                                    <table width="15" align="left" border="0" cellpadding="0" cellspacing="0">
-                                        <tr>
-                                            <td height="20"></td>
-                                        </tr>
-                                    </table>
-                                <!--[if (gte mso 9)|(IE)]></td><td><![endif]-->
+                                <table width="20" align="left" border="0" cellpadding="0" cellspacing="0">
+                                    <tr>
+                                        <td height="20"></td>
+                                    </tr>
+                                </table>
                                 <!--left-->
-                                <table width="190" height="94" class="table-full" border="0" align="left" cellpadding="0"
+                                <table width="120" class="table-full" border="0" align="left" cellpadding="0"
                                     cellspacing="0">
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;">
-                                            <a href="https://sponsoplus.fr/" target="_blank">
+                                            <a href="https://www.mapetitesponso.fr" target="_blank">
                                                 <img
-                                                    src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1642992823/email/sponso_plus.png" alt="" width="180"
-                                                    style="display:block; line-height:0px; font-size:0px; border:0px; width:180px;"
+                                                    src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1678346963/email/ma-petite-sponso.png" alt="" width="160"
+                                                    style="display:block; line-height:0px; font-size:0px; border:0px; width:77px;"
                                                     editable label="image" />
                                             </a>
                                         </td>
@@ -1121,22 +1118,22 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                 </table>
                                 <!--end left-->
                                 <!--[if (gte mso 9)|(IE)]></td><td><![endif]-->
-                                <table width="15" align="left" border="0" cellpadding="0" cellspacing="0">
+                                <table width="20" align="left" border="0" cellpadding="0" cellspacing="0">
                                     <tr>
                                         <td height="20"></td>
                                     </tr>
                                 </table>
                                 <!--[if (gte mso 9)|(IE)]></td><td><![endif]-->
                                 <!--right-->
-                                <table width="190" class="table-full" border="0" align="left" cellpadding="0"
+                                <table width="120" height="94" class="table-full" border="0" align="left" cellpadding="0"
                                     cellspacing="0">
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;">
-                                            <a href="https://adetem.org/" target="_blank">
+                                            <a href="https://www.sportyma.com" target="_blank">
                                                 <img
-                                                    src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1652422569/email/adetem.png" alt="" width="160"
-                                                    style="display:block; line-height:0px; font-size:0px; border:0px; width:100px;"
+                                                    src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1675397143/email/sportyma.png" alt="" width="140"
+                                                    style="display:block; line-height:0px; font-size:0px; border:0px; width:140px;"
                                                     editable label="image" />
                                             </a>
                                         </td>
@@ -1144,6 +1141,35 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--end img-->
                                 </table>
                                 <!--end right-->
+                                <table width="20" align="left" border="0" cellpadding="0" cellspacing="0">
+                                    <tr>
+                                        <td height="20"></td>
+                                    </tr>
+                                </table>
+                                <!--left-->
+                                <table width="120" class="table-full" border="0" align="left" cellpadding="0"
+                                    cellspacing="0">
+                                    <!--img-->
+                                    <tr>
+                                        <td align="center" style="line-height:0px;">
+                                            <a href="https://www.rematch.tv" target="_blank">
+                                                <img
+                                                    src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1675397153/email/rematch.png" alt="" width="160"
+                                                    style="display:block; line-height:0px; font-size:0px; border:0px; width:77px;"
+                                                    editable label="image" />
+                                            </a>
+                                        </td>
+                                    </tr>
+                                    <!--end img-->
+                                </table>
+                                <!--end left-->
+                                <!--[if (gte mso 9)|(IE)]></td><td><![endif]-->
+                                <table width="20" align="left" border="0" cellpadding="0" cellspacing="0">
+                                    <tr>
+                                        <td height="20"></td>
+                                    </tr>
+                                </table>
+                                <!--[if (gte mso 9)|(IE)]></td><td><![endif]-->
                             </td>
                         </tr>
                         <tr>
@@ -1190,7 +1216,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <tr>
                                         <td align="center"
                                             style="font-family: Roboto; font-size:13px; line-height: 20px; color:#FFFFFF;">
-                                            <single label="title">Copyright ©2022 Artywiz. Tous droits réservés.</single>
+                                            <single label="title">Copyright ©2023 Artywiz. Tous droits réservés.</single>
                                         </td>
                                     </tr>
                                     <!--end title-->
